Improvements to queries